parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement
Rule 3     statement_list -> statement_list statement
Rule 4     block -> statement
Rule 5     block -> statement_list
Rule 6     statement -> ID EQUALS expr NEWLINE
Rule 7     statement -> PRINT LPAREN expr RPAREN NEWLINE
Rule 8     statement -> IF expr COLON NEWLINE block ELSE COLON NEWLINE block
Rule 9     statement -> FOR ID IN RANGE LPAREN expr RPAREN COLON NEWLINE block
Rule 10    expr -> expr EQEQ expr
Rule 11    expr -> expr NEQ expr
Rule 12    expr -> expr GT expr
Rule 13    expr -> expr LT expr
Rule 14    expr -> expr GEQ expr
Rule 15    expr -> expr LEQ expr
Rule 16    expr -> expr AND expr
Rule 17    expr -> expr OR expr
Rule 18    expr -> expr PLUS expr
Rule 19    expr -> expr MINUS expr
Rule 20    expr -> expr TIMES expr
Rule 21    expr -> expr DIVIDE expr
Rule 22    expr -> NUMBER
Rule 23    expr -> FLOAT
Rule 24    expr -> ID
Rule 25    expr -> STRING
Rule 26    expr -> TRUE
Rule 27    expr -> FALSE
Rule 28    expr -> LPAREN expr RPAREN
Rule 29    expr -> expr COMMA expr

Terminals, with rules where they appear

AND                  : 16
COLON                : 8 8 9
COMMA                : 29
DIVIDE               : 21
ELSE                 : 8
EQEQ                 : 10
EQUALS               : 6
FALSE                : 27
FLOAT                : 23
FOR                  : 9
GEQ                  : 14
GT                   : 12
ID                   : 6 9 24
IF                   : 8
IN                   : 9
LEQ                  : 15
LPAREN               : 7 9 28
LT                   : 13
MINUS                : 19
NEQ                  : 11
NEWLINE              : 6 7 8 8 9
NUMBER               : 22
OR                   : 17
PLUS                 : 18
PRINT                : 7
RANGE                : 9
RPAREN               : 7 9 28
STRING               : 25
TIMES                : 20
TRUE                 : 26
error                : 

Nonterminals, with rules where they appear

block                : 8 8 9
expr                 : 6 7 8 9 10 10 11 11 12 12 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 28 29 29
program              : 0
statement            : 2 3 4
statement_list       : 1 3 5

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement
    (3) statement_list -> . statement_list statement
    (6) statement -> . ID EQUALS expr NEWLINE
    (7) statement -> . PRINT LPAREN expr RPAREN NEWLINE
    (8) statement -> . IF expr COLON NEWLINE block ELSE COLON NEWLINE block
    (9) statement -> . FOR ID IN RANGE LPAREN expr RPAREN COLON NEWLINE block

    ID              shift and go to state 4
    PRINT           shift and go to state 5
    IF              shift and go to state 6
    FOR             shift and go to state 7

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (3) statement_list -> statement_list . statement
    (6) statement -> . ID EQUALS expr NEWLINE
    (7) statement -> . PRINT LPAREN expr RPAREN NEWLINE
    (8) statement -> . IF expr COLON NEWLINE block ELSE COLON NEWLINE block
    (9) statement -> . FOR ID IN RANGE LPAREN expr RPAREN COLON NEWLINE block

    $end            reduce using rule 1 (program -> statement_list .)
    ID              shift and go to state 4
    PRINT           shift and go to state 5
    IF              shift and go to state 6
    FOR             shift and go to state 7

    statement                      shift and go to state 8

state 3

    (2) statement_list -> statement .

    ID              reduce using rule 2 (statement_list -> statement .)
    PRINT           reduce using rule 2 (statement_list -> statement .)
    IF              reduce using rule 2 (statement_list -> statement .)
    FOR             reduce using rule 2 (statement_list -> statement .)
    $end            reduce using rule 2 (statement_list -> statement .)


state 4

    (6) statement -> ID . EQUALS expr NEWLINE

    EQUALS          shift and go to state 9


state 5

    (7) statement -> PRINT . LPAREN expr RPAREN NEWLINE

    LPAREN          shift and go to state 10


state 6

    (8) statement -> IF . expr COLON NEWLINE block ELSE COLON NEWLINE block
    (10) expr -> . expr EQEQ expr
    (11) expr -> . expr NEQ expr
    (12) expr -> . expr GT expr
    (13) expr -> . expr LT expr
    (14) expr -> . expr GEQ expr
    (15) expr -> . expr LEQ expr
    (16) expr -> . expr AND expr
    (17) expr -> . expr OR expr
    (18) expr -> . expr PLUS expr
    (19) expr -> . expr MINUS expr
    (20) expr -> . expr TIMES expr
    (21) expr -> . expr DIVIDE expr
    (22) expr -> . NUMBER
    (23) expr -> . FLOAT
    (24) expr -> . ID
    (25) expr -> . STRING
    (26) expr -> . TRUE
    (27) expr -> . FALSE
    (28) expr -> . LPAREN expr RPAREN
    (29) expr -> . expr COMMA expr

    NUMBER          shift and go to state 12
    FLOAT           shift and go to state 13
    ID              shift and go to state 14
    STRING          shift and go to state 15
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    LPAREN          shift and go to state 18

    expr                           shift and go to state 11

state 7

    (9) statement -> FOR . ID IN RANGE LPAREN expr RPAREN COLON NEWLINE block

    ID              shift and go to state 19


state 8

    (3) statement_list -> statement_list statement .

    ID              reduce using rule 3 (statement_list -> statement_list statement .)
    PRINT           reduce using rule 3 (statement_list -> statement_list statement .)
    IF              reduce using rule 3 (statement_list -> statement_list statement .)
    FOR             reduce using rule 3 (statement_list -> statement_list statement .)
    $end            reduce using rule 3 (statement_list -> statement_list statement .)
    ELSE            reduce using rule 3 (statement_list -> statement_list statement .)


state 9

    (6) statement -> ID EQUALS . expr NEWLINE
    (10) expr -> . expr EQEQ expr
    (11) expr -> . expr NEQ expr
    (12) expr -> . expr GT expr
    (13) expr -> . expr LT expr
    (14) expr -> . expr GEQ expr
    (15) expr -> . expr LEQ expr
    (16) expr -> . expr AND expr
    (17) expr -> . expr OR expr
    (18) expr -> . expr PLUS expr
    (19) expr -> . expr MINUS expr
    (20) expr -> . expr TIMES expr
    (21) expr -> . expr DIVIDE expr
    (22) expr -> . NUMBER
    (23) expr -> . FLOAT
    (24) expr -> . ID
    (25) expr -> . STRING
    (26) expr -> . TRUE
    (27) expr -> . FALSE
    (28) expr -> . LPAREN expr RPAREN
    (29) expr -> . expr COMMA expr

    NUMBER          shift and go to state 12
    FLOAT           shift and go to state 13
    ID              shift and go to state 14
    STRING          shift and go to state 15
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    LPAREN          shift and go to state 18

    expr                           shift and go to state 20

state 10

    (7) statement -> PRINT LPAREN . expr RPAREN NEWLINE
    (10) expr -> . expr EQEQ expr
    (11) expr -> . expr NEQ expr
    (12) expr -> . expr GT expr
    (13) expr -> . expr LT expr
    (14) expr -> . expr GEQ expr
    (15) expr -> . expr LEQ expr
    (16) expr -> . expr AND expr
    (17) expr -> . expr OR expr
    (18) expr -> . expr PLUS expr
    (19) expr -> . expr MINUS expr
    (20) expr -> . expr TIMES expr
    (21) expr -> . expr DIVIDE expr
    (22) expr -> . NUMBER
    (23) expr -> . FLOAT
    (24) expr -> . ID
    (25) expr -> . STRING
    (26) expr -> . TRUE
    (27) expr -> . FALSE
    (28) expr -> . LPAREN expr RPAREN
    (29) expr -> . expr COMMA expr

    NUMBER          shift and go to state 12
    FLOAT           shift and go to state 13
    ID              shift and go to state 14
    STRING          shift and go to state 15
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    LPAREN          shift and go to state 18

    expr                           shift and go to state 21

state 11

    (8) statement -> IF expr . COLON NEWLINE block ELSE COLON NEWLINE block
    (10) expr -> expr . EQEQ expr
    (11) expr -> expr . NEQ expr
    (12) expr -> expr . GT expr
    (13) expr -> expr . LT expr
    (14) expr -> expr . GEQ expr
    (15) expr -> expr . LEQ expr
    (16) expr -> expr . AND expr
    (17) expr -> expr . OR expr
    (18) expr -> expr . PLUS expr
    (19) expr -> expr . MINUS expr
    (20) expr -> expr . TIMES expr
    (21) expr -> expr . DIVIDE expr
    (29) expr -> expr . COMMA expr

    COLON           shift and go to state 22
    EQEQ            shift and go to state 23
    NEQ             shift and go to state 24
    GT              shift and go to state 25
    LT              shift and go to state 26
    GEQ             shift and go to state 27
    LEQ             shift and go to state 28
    AND             shift and go to state 29
    OR              shift and go to state 30
    PLUS            shift and go to state 31
    MINUS           shift and go to state 32
    TIMES           shift and go to state 33
    DIVIDE          shift and go to state 34
    COMMA           shift and go to state 35


state 12

    (22) expr -> NUMBER .

    COLON           reduce using rule 22 (expr -> NUMBER .)
    EQEQ            reduce using rule 22 (expr -> NUMBER .)
    NEQ             reduce using rule 22 (expr -> NUMBER .)
    GT              reduce using rule 22 (expr -> NUMBER .)
    LT              reduce using rule 22 (expr -> NUMBER .)
    GEQ             reduce using rule 22 (expr -> NUMBER .)
    LEQ             reduce using rule 22 (expr -> NUMBER .)
    AND             reduce using rule 22 (expr -> NUMBER .)
    OR              reduce using rule 22 (expr -> NUMBER .)
    PLUS            reduce using rule 22 (expr -> NUMBER .)
    MINUS           reduce using rule 22 (expr -> NUMBER .)
    TIMES           reduce using rule 22 (expr -> NUMBER .)
    DIVIDE          reduce using rule 22 (expr -> NUMBER .)
    COMMA           reduce using rule 22 (expr -> NUMBER .)
    NEWLINE         reduce using rule 22 (expr -> NUMBER .)
    RPAREN          reduce using rule 22 (expr -> NUMBER .)


state 13

    (23) expr -> FLOAT .

    COLON           reduce using rule 23 (expr -> FLOAT .)
    EQEQ            reduce using rule 23 (expr -> FLOAT .)
    NEQ             reduce using rule 23 (expr -> FLOAT .)
    GT              reduce using rule 23 (expr -> FLOAT .)
    LT              reduce using rule 23 (expr -> FLOAT .)
    GEQ             reduce using rule 23 (expr -> FLOAT .)
    LEQ             reduce using rule 23 (expr -> FLOAT .)
    AND             reduce using rule 23 (expr -> FLOAT .)
    OR              reduce using rule 23 (expr -> FLOAT .)
    PLUS            reduce using rule 23 (expr -> FLOAT .)
    MINUS           reduce using rule 23 (expr -> FLOAT .)
    TIMES           reduce using rule 23 (expr -> FLOAT .)
    DIVIDE          reduce using rule 23 (expr -> FLOAT .)
    COMMA           reduce using rule 23 (expr -> FLOAT .)
    NEWLINE         reduce using rule 23 (expr -> FLOAT .)
    RPAREN          reduce using rule 23 (expr -> FLOAT .)


state 14

    (24) expr -> ID .

    COLON           reduce using rule 24 (expr -> ID .)
    EQEQ            reduce using rule 24 (expr -> ID .)
    NEQ             reduce using rule 24 (expr -> ID .)
    GT              reduce using rule 24 (expr -> ID .)
    LT              reduce using rule 24 (expr -> ID .)
    GEQ             reduce using rule 24 (expr -> ID .)
    LEQ             reduce using rule 24 (expr -> ID .)
    AND             reduce using rule 24 (expr -> ID .)
    OR              reduce using rule 24 (expr -> ID .)
    PLUS            reduce using rule 24 (expr -> ID .)
    MINUS           reduce using rule 24 (expr -> ID .)
    TIMES           reduce using rule 24 (expr -> ID .)
    DIVIDE          reduce using rule 24 (expr -> ID .)
    COMMA           reduce using rule 24 (expr -> ID .)
    NEWLINE         reduce using rule 24 (expr -> ID .)
    RPAREN          reduce using rule 24 (expr -> ID .)


state 15

    (25) expr -> STRING .

    COLON           reduce using rule 25 (expr -> STRING .)
    EQEQ            reduce using rule 25 (expr -> STRING .)
    NEQ             reduce using rule 25 (expr -> STRING .)
    GT              reduce using rule 25 (expr -> STRING .)
    LT              reduce using rule 25 (expr -> STRING .)
    GEQ             reduce using rule 25 (expr -> STRING .)
    LEQ             reduce using rule 25 (expr -> STRING .)
    AND             reduce using rule 25 (expr -> STRING .)
    OR              reduce using rule 25 (expr -> STRING .)
    PLUS            reduce using rule 25 (expr -> STRING .)
    MINUS           reduce using rule 25 (expr -> STRING .)
    TIMES           reduce using rule 25 (expr -> STRING .)
    DIVIDE          reduce using rule 25 (expr -> STRING .)
    COMMA           reduce using rule 25 (expr -> STRING .)
    NEWLINE         reduce using rule 25 (expr -> STRING .)
    RPAREN          reduce using rule 25 (expr -> STRING .)


state 16

    (26) expr -> TRUE .

    COLON           reduce using rule 26 (expr -> TRUE .)
    EQEQ            reduce using rule 26 (expr -> TRUE .)
    NEQ             reduce using rule 26 (expr -> TRUE .)
    GT              reduce using rule 26 (expr -> TRUE .)
    LT              reduce using rule 26 (expr -> TRUE .)
    GEQ             reduce using rule 26 (expr -> TRUE .)
    LEQ             reduce using rule 26 (expr -> TRUE .)
    AND             reduce using rule 26 (expr -> TRUE .)
    OR              reduce using rule 26 (expr -> TRUE .)
    PLUS            reduce using rule 26 (expr -> TRUE .)
    MINUS           reduce using rule 26 (expr -> TRUE .)
    TIMES           reduce using rule 26 (expr -> TRUE .)
    DIVIDE          reduce using rule 26 (expr -> TRUE .)
    COMMA           reduce using rule 26 (expr -> TRUE .)
    NEWLINE         reduce using rule 26 (expr -> TRUE .)
    RPAREN          reduce using rule 26 (expr -> TRUE .)


state 17

    (27) expr -> FALSE .

    COLON           reduce using rule 27 (expr -> FALSE .)
    EQEQ            reduce using rule 27 (expr -> FALSE .)
    NEQ             reduce using rule 27 (expr -> FALSE .)
    GT              reduce using rule 27 (expr -> FALSE .)
    LT              reduce using rule 27 (expr -> FALSE .)
    GEQ             reduce using rule 27 (expr -> FALSE .)
    LEQ             reduce using rule 27 (expr -> FALSE .)
    AND             reduce using rule 27 (expr -> FALSE .)
    OR              reduce using rule 27 (expr -> FALSE .)
    PLUS            reduce using rule 27 (expr -> FALSE .)
    MINUS           reduce using rule 27 (expr -> FALSE .)
    TIMES           reduce using rule 27 (expr -> FALSE .)
    DIVIDE          reduce using rule 27 (expr -> FALSE .)
    COMMA           reduce using rule 27 (expr -> FALSE .)
    NEWLINE         reduce using rule 27 (expr -> FALSE .)
    RPAREN          reduce using rule 27 (expr -> FALSE .)


state 18

    (28) expr -> LPAREN . expr RPAREN
    (10) expr -> . expr EQEQ expr
    (11) expr -> . expr NEQ expr
    (12) expr -> . expr GT expr
    (13) expr -> . expr LT expr
    (14) expr -> . expr GEQ expr
    (15) expr -> . expr LEQ expr
    (16) expr -> . expr AND expr
    (17) expr -> . expr OR expr
    (18) expr -> . expr PLUS expr
    (19) expr -> . expr MINUS expr
    (20) expr -> . expr TIMES expr
    (21) expr -> . expr DIVIDE expr
    (22) expr -> . NUMBER
    (23) expr -> . FLOAT
    (24) expr -> . ID
    (25) expr -> . STRING
    (26) expr -> . TRUE
    (27) expr -> . FALSE
    (28) expr -> . LPAREN expr RPAREN
    (29) expr -> . expr COMMA expr

    NUMBER          shift and go to state 12
    FLOAT           shift and go to state 13
    ID              shift and go to state 14
    STRING          shift and go to state 15
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    LPAREN          shift and go to state 18

    expr                           shift and go to state 36

state 19

    (9) statement -> FOR ID . IN RANGE LPAREN expr RPAREN COLON NEWLINE block

    IN              shift and go to state 37


state 20

    (6) statement -> ID EQUALS expr . NEWLINE
    (10) expr -> expr . EQEQ expr
    (11) expr -> expr . NEQ expr
    (12) expr -> expr . GT expr
    (13) expr -> expr . LT expr
    (14) expr -> expr . GEQ expr
    (15) expr -> expr . LEQ expr
    (16) expr -> expr . AND expr
    (17) expr -> expr . OR expr
    (18) expr -> expr . PLUS expr
    (19) expr -> expr . MINUS expr
    (20) expr -> expr . TIMES expr
    (21) expr -> expr . DIVIDE expr
    (29) expr -> expr . COMMA expr

    NEWLINE         shift and go to state 38
    EQEQ            shift and go to state 23
    NEQ             shift and go to state 24
    GT              shift and go to state 25
    LT              shift and go to state 26
    GEQ             shift and go to state 27
    LEQ             shift and go to state 28
    AND             shift and go to state 29
    OR              shift and go to state 30
    PLUS            shift and go to state 31
    MINUS           shift and go to state 32
    TIMES           shift and go to state 33
    DIVIDE          shift and go to state 34
    COMMA           shift and go to state 35


state 21

    (7) statement -> PRINT LPAREN expr . RPAREN NEWLINE
    (10) expr -> expr . EQEQ expr
    (11) expr -> expr . NEQ expr
    (12) expr -> expr . GT expr
    (13) expr -> expr . LT expr
    (14) expr -> expr . GEQ expr
    (15) expr -> expr . LEQ expr
    (16) expr -> expr . AND expr
    (17) expr -> expr . OR expr
    (18) expr -> expr . PLUS expr
    (19) expr -> expr . MINUS expr
    (20) expr -> expr . TIMES expr
    (21) expr -> expr . DIVIDE expr
    (29) expr -> expr . COMMA expr

    RPAREN          shift and go to state 39
    EQEQ            shift and go to state 23
    NEQ             shift and go to state 24
    GT              shift and go to state 25
    LT              shift and go to state 26
    GEQ             shift and go to state 27
    LEQ             shift and go to state 28
    AND             shift and go to state 29
    OR              shift and go to state 30
    PLUS            shift and go to state 31
    MINUS           shift and go to state 32
    TIMES           shift and go to state 33
    DIVIDE          shift and go to state 34
    COMMA           shift and go to state 35


state 22

    (8) statement -> IF expr COLON . NEWLINE block ELSE COLON NEWLINE block

    NEWLINE         shift and go to state 40


state 23

    (10) expr -> expr EQEQ . expr
    (10) expr -> . expr EQEQ expr
    (11) expr -> . expr NEQ expr
    (12) expr -> . expr GT expr
    (13) expr -> . expr LT expr
    (14) expr -> . expr GEQ expr
    (15) expr -> . expr LEQ expr
    (16) expr -> . expr AND expr
    (17) expr -> . expr OR expr
    (18) expr -> . expr PLUS expr
    (19) expr -> . expr MINUS expr
    (20) expr -> . expr TIMES expr
    (21) expr -> . expr DIVIDE expr
    (22) expr -> . NUMBER
    (23) expr -> . FLOAT
    (24) expr -> . ID
    (25) expr -> . STRING
    (26) expr -> . TRUE
    (27) expr -> . FALSE
    (28) expr -> . LPAREN expr RPAREN
    (29) expr -> . expr COMMA expr

    NUMBER          shift and go to state 12
    FLOAT           shift and go to state 13
    ID              shift and go to state 14
    STRING          shift and go to state 15
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    LPAREN          shift and go to state 18

    expr                           shift and go to state 41

state 24

    (11) expr -> expr NEQ . expr
    (10) expr -> . expr EQEQ expr
    (11) expr -> . expr NEQ expr
    (12) expr -> . expr GT expr
    (13) expr -> . expr LT expr
    (14) expr -> . expr GEQ expr
    (15) expr -> . expr LEQ expr
    (16) expr -> . expr AND expr
    (17) expr -> . expr OR expr
    (18) expr -> . expr PLUS expr
    (19) expr -> . expr MINUS expr
    (20) expr -> . expr TIMES expr
    (21) expr -> . expr DIVIDE expr
    (22) expr -> . NUMBER
    (23) expr -> . FLOAT
    (24) expr -> . ID
    (25) expr -> . STRING
    (26) expr -> . TRUE
    (27) expr -> . FALSE
    (28) expr -> . LPAREN expr RPAREN
    (29) expr -> . expr COMMA expr

    NUMBER          shift and go to state 12
    FLOAT           shift and go to state 13
    ID              shift and go to state 14
    STRING          shift and go to state 15
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    LPAREN          shift and go to state 18

    expr                           shift and go to state 42

state 25

    (12) expr -> expr GT . expr
    (10) expr -> . expr EQEQ expr
    (11) expr -> . expr NEQ expr
    (12) expr -> . expr GT expr
    (13) expr -> . expr LT expr
    (14) expr -> . expr GEQ expr
    (15) expr -> . expr LEQ expr
    (16) expr -> . expr AND expr
    (17) expr -> . expr OR expr
    (18) expr -> . expr PLUS expr
    (19) expr -> . expr MINUS expr
    (20) expr -> . expr TIMES expr
    (21) expr -> . expr DIVIDE expr
    (22) expr -> . NUMBER
    (23) expr -> . FLOAT
    (24) expr -> . ID
    (25) expr -> . STRING
    (26) expr -> . TRUE
    (27) expr -> . FALSE
    (28) expr -> . LPAREN expr RPAREN
    (29) expr -> . expr COMMA expr

    NUMBER          shift and go to state 12
    FLOAT           shift and go to state 13
    ID              shift and go to state 14
    STRING          shift and go to state 15
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    LPAREN          shift and go to state 18

    expr                           shift and go to state 43

state 26

    (13) expr -> expr LT . expr
    (10) expr -> . expr EQEQ expr
    (11) expr -> . expr NEQ expr
    (12) expr -> . expr GT expr
    (13) expr -> . expr LT expr
    (14) expr -> . expr GEQ expr
    (15) expr -> . expr LEQ expr
    (16) expr -> . expr AND expr
    (17) expr -> . expr OR expr
    (18) expr -> . expr PLUS expr
    (19) expr -> . expr MINUS expr
    (20) expr -> . expr TIMES expr
    (21) expr -> . expr DIVIDE expr
    (22) expr -> . NUMBER
    (23) expr -> . FLOAT
    (24) expr -> . ID
    (25) expr -> . STRING
    (26) expr -> . TRUE
    (27) expr -> . FALSE
    (28) expr -> . LPAREN expr RPAREN
    (29) expr -> . expr COMMA expr

    NUMBER          shift and go to state 12
    FLOAT           shift and go to state 13
    ID              shift and go to state 14
    STRING          shift and go to state 15
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    LPAREN          shift and go to state 18

    expr                           shift and go to state 44

state 27

    (14) expr -> expr GEQ . expr
    (10) expr -> . expr EQEQ expr
    (11) expr -> . expr NEQ expr
    (12) expr -> . expr GT expr
    (13) expr -> . expr LT expr
    (14) expr -> . expr GEQ expr
    (15) expr -> . expr LEQ expr
    (16) expr -> . expr AND expr
    (17) expr -> . expr OR expr
    (18) expr -> . expr PLUS expr
    (19) expr -> . expr MINUS expr
    (20) expr -> . expr TIMES expr
    (21) expr -> . expr DIVIDE expr
    (22) expr -> . NUMBER
    (23) expr -> . FLOAT
    (24) expr -> . ID
    (25) expr -> . STRING
    (26) expr -> . TRUE
    (27) expr -> . FALSE
    (28) expr -> . LPAREN expr RPAREN
    (29) expr -> . expr COMMA expr

    NUMBER          shift and go to state 12
    FLOAT           shift and go to state 13
    ID              shift and go to state 14
    STRING          shift and go to state 15
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    LPAREN          shift and go to state 18

    expr                           shift and go to state 45

state 28

    (15) expr -> expr LEQ . expr
    (10) expr -> . expr EQEQ expr
    (11) expr -> . expr NEQ expr
    (12) expr -> . expr GT expr
    (13) expr -> . expr LT expr
    (14) expr -> . expr GEQ expr
    (15) expr -> . expr LEQ expr
    (16) expr -> . expr AND expr
    (17) expr -> . expr OR expr
    (18) expr -> . expr PLUS expr
    (19) expr -> . expr MINUS expr
    (20) expr -> . expr TIMES expr
    (21) expr -> . expr DIVIDE expr
    (22) expr -> . NUMBER
    (23) expr -> . FLOAT
    (24) expr -> . ID
    (25) expr -> . STRING
    (26) expr -> . TRUE
    (27) expr -> . FALSE
    (28) expr -> . LPAREN expr RPAREN
    (29) expr -> . expr COMMA expr

    NUMBER          shift and go to state 12
    FLOAT           shift and go to state 13
    ID              shift and go to state 14
    STRING          shift and go to state 15
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    LPAREN          shift and go to state 18

    expr                           shift and go to state 46

state 29

    (16) expr -> expr AND . expr
    (10) expr -> . expr EQEQ expr
    (11) expr -> . expr NEQ expr
    (12) expr -> . expr GT expr
    (13) expr -> . expr LT expr
    (14) expr -> . expr GEQ expr
    (15) expr -> . expr LEQ expr
    (16) expr -> . expr AND expr
    (17) expr -> . expr OR expr
    (18) expr -> . expr PLUS expr
    (19) expr -> . expr MINUS expr
    (20) expr -> . expr TIMES expr
    (21) expr -> . expr DIVIDE expr
    (22) expr -> . NUMBER
    (23) expr -> . FLOAT
    (24) expr -> . ID
    (25) expr -> . STRING
    (26) expr -> . TRUE
    (27) expr -> . FALSE
    (28) expr -> . LPAREN expr RPAREN
    (29) expr -> . expr COMMA expr

    NUMBER          shift and go to state 12
    FLOAT           shift and go to state 13
    ID              shift and go to state 14
    STRING          shift and go to state 15
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    LPAREN          shift and go to state 18

    expr                           shift and go to state 47

state 30

    (17) expr -> expr OR . expr
    (10) expr -> . expr EQEQ expr
    (11) expr -> . expr NEQ expr
    (12) expr -> . expr GT expr
    (13) expr -> . expr LT expr
    (14) expr -> . expr GEQ expr
    (15) expr -> . expr LEQ expr
    (16) expr -> . expr AND expr
    (17) expr -> . expr OR expr
    (18) expr -> . expr PLUS expr
    (19) expr -> . expr MINUS expr
    (20) expr -> . expr TIMES expr
    (21) expr -> . expr DIVIDE expr
    (22) expr -> . NUMBER
    (23) expr -> . FLOAT
    (24) expr -> . ID
    (25) expr -> . STRING
    (26) expr -> . TRUE
    (27) expr -> . FALSE
    (28) expr -> . LPAREN expr RPAREN
    (29) expr -> . expr COMMA expr

    NUMBER          shift and go to state 12
    FLOAT           shift and go to state 13
    ID              shift and go to state 14
    STRING          shift and go to state 15
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    LPAREN          shift and go to state 18

    expr                           shift and go to state 48

state 31

    (18) expr -> expr PLUS . expr
    (10) expr -> . expr EQEQ expr
    (11) expr -> . expr NEQ expr
    (12) expr -> . expr GT expr
    (13) expr -> . expr LT expr
    (14) expr -> . expr GEQ expr
    (15) expr -> . expr LEQ expr
    (16) expr -> . expr AND expr
    (17) expr -> . expr OR expr
    (18) expr -> . expr PLUS expr
    (19) expr -> . expr MINUS expr
    (20) expr -> . expr TIMES expr
    (21) expr -> . expr DIVIDE expr
    (22) expr -> . NUMBER
    (23) expr -> . FLOAT
    (24) expr -> . ID
    (25) expr -> . STRING
    (26) expr -> . TRUE
    (27) expr -> . FALSE
    (28) expr -> . LPAREN expr RPAREN
    (29) expr -> . expr COMMA expr

    NUMBER          shift and go to state 12
    FLOAT           shift and go to state 13
    ID              shift and go to state 14
    STRING          shift and go to state 15
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    LPAREN          shift and go to state 18

    expr                           shift and go to state 49

state 32

    (19) expr -> expr MINUS . expr
    (10) expr -> . expr EQEQ expr
    (11) expr -> . expr NEQ expr
    (12) expr -> . expr GT expr
    (13) expr -> . expr LT expr
    (14) expr -> . expr GEQ expr
    (15) expr -> . expr LEQ expr
    (16) expr -> . expr AND expr
    (17) expr -> . expr OR expr
    (18) expr -> . expr PLUS expr
    (19) expr -> . expr MINUS expr
    (20) expr -> . expr TIMES expr
    (21) expr -> . expr DIVIDE expr
    (22) expr -> . NUMBER
    (23) expr -> . FLOAT
    (24) expr -> . ID
    (25) expr -> . STRING
    (26) expr -> . TRUE
    (27) expr -> . FALSE
    (28) expr -> . LPAREN expr RPAREN
    (29) expr -> . expr COMMA expr

    NUMBER          shift and go to state 12
    FLOAT           shift and go to state 13
    ID              shift and go to state 14
    STRING          shift and go to state 15
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    LPAREN          shift and go to state 18

    expr                           shift and go to state 50

state 33
